<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/twentyDP"
        >

        <EditText
            android:id="@+id/eTUser"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tvIcon"
            android:hint="@string/tv_User"
            android:drawableStart="@drawable/icon_myaccount"
            android:padding="@dimen/tenDP"
            android:drawablePadding="@dimen/tenDP"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/sizeText"
            android:background="@drawable/custom_et"
            />

        <EditText
            android:id="@+id/eTEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tvIcon"
            android:hint="@string/tv_Input_Email"
            android:drawableStart="@drawable/icon_email"
            android:padding="@dimen/tenDP"
            android:drawablePadding="@dimen/tenDP"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/sizeText"
            android:layout_marginTop="@dimen/tenDP"
            android:background="@drawable/custom_et"
            />

        <EditText
            android:id="@+id/eTPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tvIcon"
            android:hint="@string/tv_Input_Pass"
            android:drawableStart="@drawable/icon_lock"
            android:padding="@dimen/tenDP"
            android:drawablePadding="@dimen/tenDP"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/sizeText"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/tenDP"
            android:background="@drawable/custom_et"
            />

        <EditText
            android:id="@+id/eTRPass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tvIcon"
            android:hint="@string/tv_RPass"
            android:drawableStart="@drawable/icon_lock"
            android:padding="@dimen/tenDP"
            android:drawablePadding="@dimen/tenDP"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/sizeText"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/tenDP"
            android:background="@drawable/custom_et"
            />

        <CheckBox
            android:id="@+id/cb_showpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tenDP"
            android:text="@string/cb_pass"
            android:layout_marginStart="220dp"
            />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="@dimen/sizeText"
            android:layout_marginTop="@dimen/tenDP"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterMain"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tvIcon"
            android:layout_marginTop="@dimen/twentyDP"
            android:background="@drawable/custom_btn_login"
            android:text="@string/tv_Register"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/sizeText"
            />

    </LinearLayout>

</FrameLayout>