<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/b_while"
            android:padding="@dimen/twentyDP"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_addGenres"
                android:textColor="@color/red"
                android:textSize="@dimen/sizebtn"
                android:textStyle="bold"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/thirtyDP"
                android:background="@drawable/custom_et"
                >

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="@dimen/mottramDP"
                    android:layout_height="@dimen/tvIcon"
                    android:text="@string/tv_NameGenres"
                    android:gravity="center_vertical"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/sizeText"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/tvAddNG"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tvIcon"
                    android:gravity="center_vertical"
                    android:hint="@string/tv_Input_nameGenres"
                    android:textSize="@dimen/sizeText"
                    android:textColor="@color/black"
                    android:paddingStart="5dp"
                    android:background="@drawable/custom_et"
                    />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_errorAG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="@dimen/sizeText"
                android:layout_marginTop="@dimen/tenDP"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twentyDP"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAdd"
                    android:layout_width="@dimen/mottramnammuoiDP"
                    android:layout_height="@dimen/tvIcon"
                    android:text="@string/tv_add_user"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/twentyDP"
                    android:background="@drawable/button_disabled"
                    android:textAllCaps="false"
                    android:textSize="@dimen/sizeText"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="@dimen/mottramnammuoiDP"
                    android:layout_height="@dimen/tvIcon"
                    android:text="@string/tv_exit"
                    android:layout_marginStart="@dimen/thirtyDP"
                    android:background="@drawable/custom_btn_register"
                    android:textColor="@color/blue"
                    android:textAllCaps="false"
                    android:textSize="@dimen/sizeText"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>