<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/b_while"
    android:orientation="vertical"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/twentyDP"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Thêm Sách"
                android:textColor="@color/red"
                android:textSize="@dimen/sizebtn"
                android:textStyle="bold"
                android:gravity="center"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/twentyDP"
                >
                <ImageView
                    android:id="@+id/theme"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnImage"
                android:layout_width="@dimen/mottramDP"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/tenDP"
                android:background="@drawable/custom_file"
                android:text="Chọn ảnh"
                android:textAllCaps="false"
                android:textSize="@dimen/sizeText"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/thirtyDP"
                android:background="@drawable/custom_et"
                >

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="@dimen/mottramDP"
                    android:layout_height="@dimen/tvIcon"
                    android:text="@string/tv_NameBook"
                    android:gravity="center_vertical"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/sizeText"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/ed_nameBook"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tvIcon"
                    android:gravity="center_vertical"
                    android:hint="@string/ed_nameBook"
                    android:textSize="@dimen/sizeText"
                    android:paddingStart="5dp"
                    android:background="@drawable/custom_et"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/tenDP"
                android:background="@drawable/custom_et"
                >

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="@dimen/mottramDP"
                    android:layout_height="@dimen/tvIcon"
                    android:gravity="center_vertical"
                    android:text="@string/tv_NameAuthor"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/sizeText"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/ed_nameAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tvIcon"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:hint="@string/ed_nameAuthor"
                    android:textSize="@dimen/sizeText"
                    android:background="@drawable/custom_et"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/tenDP"
                android:background="@drawable/custom_et"
                >

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="@dimen/mottramDP"
                    android:layout_height="@dimen/tvIcon"
                    android:text="@string/tv_Genres"
                    android:gravity="center_vertical"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/sizeText"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/ed_listGenres"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tvIcon"
                    android:gravity="center_vertical"
                    android:background="@drawable/custom_et"
                    android:hint="@string/ed_nameGenres"
                    android:layout_marginStart="5dp"
                    android:textSize="@dimen/sizeText"
                    android:maxLines="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/tenDP"
                android:background="@drawable/custom_et"
                >

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="@dimen/mottramDP"
                    android:layout_height="@dimen/tvIcon"
                    android:text="@string/tv_describe"
                    android:paddingStart="5dp"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/sizeText"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    />

                <EditText
                    android:id="@+id/ed_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_et"
                    android:gravity="center_vertical"
                    android:hint="Trống"
                    android:inputType="textMultiLine"
                    android:paddingStart="5dp"
                    android:textColor="@color/black"
                    android:minHeight="@dimen/tvIcon"
                    android:padding="@dimen/tenDP"
                    android:maxLines="5"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_errorAB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="@dimen/sizeText"
                android:layout_marginTop="@dimen/tenDP"
                />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tvIcon"
                    android:text="@string/tv_add_user"
                    android:textColor="@color/white"
                    android:background="@drawable/button_disabled"
                    android:textAllCaps="false"
                    android:textSize="@dimen/sizeText"
                    />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>