<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/tenDP"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:padding="@dimen/tenDP"
            android:id="@+id/edSearchBook"
            android:layout_width="0dp"
            android:layout_height="@dimen/tvIcon"
            android:layout_weight="6"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:drawableEnd="@drawable/icon_search"
            android:background="@drawable/custom_btn_add"
            android:hint="Nhập nội dung tìm kiếm"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddBook"
            android:layout_width="0dp"
            android:layout_height="@dimen/tvIcon"
            android:layout_marginStart="@dimen/tenDP"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="2"
            android:background="@drawable/custom_btn_add"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/tv_add_user"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="@dimen/sizeText"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:id="@+id/titleImageBook"
            android:layout_width="0dp"
            android:layout_height="@dimen/tvIcon"
            android:layout_weight="1"
            android:text="@string/tv_ImageBook"
            android:textSize="16sp"
            android:gravity= "center"
            android:textStyle="bold"
            android:background="@drawable/custom_list"
            />

        <TextView
            android:id="@+id/titleNameBook"
            android:layout_width="0dp"
            android:layout_height="@dimen/tvIcon"
            android:layout_weight="4"
            android:text="@string/tv_NameBook"
            android:textSize="16sp"
            android:gravity= "center"
            android:textStyle="bold"
            android:background="@drawable/custom_list"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBooks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/tenDP" />

</LinearLayout>